5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4137/executions/1863_2217.log
== TEST (2019-07-02 11:18:32) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
mat1 = zeros(shape(mat[1]),shape(mat[0]), dtype = int)
for i in range shape(mat[1]):
	for j in range shape(mat[1]):
		if i == j:
			mat1[i,j] = max(mat[j])
print(mat1)
			
-- ERROR:
File "XXXX", line 6
    for i in range shape(mat[1]):
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:19:02) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
mat1 = zeros(shape(mat[1]),shape(mat[0]), dtype = int)
for i in range (shape(mat[1])):
	for j in range (shape(mat[1])):
		if i == j:
			mat1[i,j] = max(mat[j])
print(mat1)
			
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = zeros(shape(mat[1]))
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:29:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:30:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[1])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:30:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[0])
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:30:48) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[0])
mat1 = zeros((n,n), dtype = int)
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:31:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[0])
mat1 = array(zeros((n,n), dtype = int))
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:32:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = shape(mat[0])
mat1 = zeros(((shape(mat[0])),shape(mat[0])), dtype = int) 
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:05) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
mat1 = 
print(mat1)
-- ERROR:
File "XXXX", line 6
    mat1 = 
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])

print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:43) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
mat1 = zeros((n,n), dtype = int)
print(n)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:33:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
mat1 = zeros((n,n), dtype = int)
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
mat1 = zeros((n,n), dtype = int)
for i in range (size(mat)):
	for j in range (size(mat)):
		if i == j:
			mat1[i,j] = max(mat[:,j])
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:36:24) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
mat1 = zeros((n,n), dtype = int)
#for i in range (size(mat)):
	##for j in range (size(mat)):
	#	if i == j:
		#	mat1[i,j] = max(mat[:,j])
print(size(mat))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:36) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:38:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:10) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range(size(mat)):
	for j in range(size(mat)):
		if i > j:
			t[i] = mat[i,j]
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:19) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range(size(mat)):
	for j in range(size(mat)):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range(size(mat)):
	for j in range(size(mat)):
		if i > j:
			mat1[i] = mat[j,1]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:40:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range(size(mat)):
	for j in range(size(mat)):
		if i > j:
			mat1[i] = mat[j,i]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:17) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range(shape(mat[0])):
	for j in range(shape(mat[0])):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:45) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range n:
	for j in range n:
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
File "XXXX", line 8
    for i in range n:
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:41:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:01) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range (shape(mat)):
	for j in range (shape(mat)):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range (shape(mat)):
	for j in range (shape(mat)[0]):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:51) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range (shape(mat)):
	for j in range (shape(mat[0])):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:43:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
mat1 = zeros(n, dtype = int)
for i in range (shape(mat[0])):
	for j in range (shape(mat[0])):
		if i > j:
			mat1[i] = mat[i,j]
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:44:54) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = int)
for i in range (shape(mat)):
	for j in range (shape(mat)):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:45:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = int)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(mat1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:45:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = int)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1)
-- ERROR:
File "XXXX", line 15
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:45:44) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = int)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:45:50) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = int)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
0.769183
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:46:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:13) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.11864
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:30) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.73361
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.56276
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
3.10117
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
0.12
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
5.37007
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
0.12
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
7.45177
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
0.12
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:31) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
8.11531
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
0.12
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:

-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:46:56) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.17428
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:47:03) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:47:11) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:47:33) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.30029
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:49:40) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- EXECUTION TIME:
1.03608
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:53) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:49:58) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a+1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[j,i]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:12) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[0])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:29) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:51:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
1.10777
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:51:57) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros((n,n) dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
File "XXXX", line 8
    mat1 = zeros((n,n) dtype = float)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:00) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros((n,n) dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
File "XXXX", line 8
    mat1 = zeros((n,n) dtype = float)
                           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:07) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("Matriz")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:28) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:52:35) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
1.0213
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:52:41) 
-- CODE:
from numpy import*


mat = array(eval(input("matriz:")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:52:47) 
-- CODE:
from numpy import*


mat = array(eval(input("matriz:")))
n = size(mat[1])
t = (n**2-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
0.978921
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:53:16) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:22) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
0.978855
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:53:38) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:53:46) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(n, dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
1.13674
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-07-02 11:54:42) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(size(mat[1]), dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-07-02 11:54:49) 
-- CODE:
from numpy import*
from numpy.linalg import*

mat = array(eval(input("matriz:")))
n = size(mat[1])
t = ((n**2)-n)//2
a = 0
mat1 = zeros(size(mat[1]), dtype = float)
for i in range (n):
	for j in range (n):
		if i > j:
			mat1[a] = mat[i,j]
			a = a + 1
print(min(mat1))
-- EXECUTION TIME:
0.946405
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
20.0
---- user output:
20.0
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.12
---- user output:
0.12
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
11.1
---- user output:

-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
